Fix blog index padding on mobile size

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -184,6 +184,7 @@ body {
 }
 
 .blog_entries {
+  padding: 0 20px;
   .blog_entry {
     &_title {
       font-size: 2em;
